Freedom Sanbox Ant Deploy/src/objects/Notification_Queue_Report__c.object
<CustomObject>
    <fields>
        <fullName>DispatchTimestamp__c</fullName>
        <label>DispatchTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dispatch_Status__c</fullName>
        <label>Dispatch Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Text__c</fullName>
        <label>Failure Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotificationQueueId__c</fullName>
        <label>NotificationQueueId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfId__c</fullName>
        <label>SfId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Notification Queue Report</label>
    <nameField>
        <label>Notification Queue Report  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Queue Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>